@@ -2,6 +2,7 @@
 
     * Add a preference menuitem to choose default pane.
     * Re-enable Oracle repository.
+    * Move language support to Computer Doctor pane.
 
 2010-05-29 MA Yue <velly.empire@gmail.com>
 
